Partial mplementation of ingestion service with VLM support

--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -23,6 +23,9 @@ docx2txt = "^0.8"
 llama-index-multi-modal-llms-openai = "^0.5.0"
 weave = "^0.51.39"
 mlflow = "^2.21.2"
+pdf2image = "^1.17.0"
+poppler-utils = "^0.1.0"
+aspose-words = "^25.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
